changed keywords to topics

--- a/output/index.html
+++ b/output/index.html
@@ -1,132 +1,132 @@
 <ul>
-<li><a href='/vbic/resources-by-topic#accounting'>Accounting</a></li>
-<li><a href='/vbic/resources-by-topic#advertising'>Advertising</a></li>
-<li><a href='/vbic/resources-by-topic#agriculturaleconomics'>Agricultural Economics</a></li>
-<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/resources-by-topic#annualreports'>Annual Reports</a></li>
-<li><a href='/vbic/resources-by-topic#associations'>Associations</a></li>
-<li><a href='/vbic/resources-by-topic#auditing'>Auditing</a></li>
-<li><a href='/vbic/resources-by-topic#bankloans'>Bank Loans</a></li>
-<li><a href='/vbic/resources-by-topic#biography'>Biography</a></li>
-<li><a href='/vbic/resources-by-topic#bonds'>Bonds</a></li>
-<li><a href='/vbic/resources-by-topic#brands'>Brands</a></li>
-<li><a href='/vbic/resources-by-topic#businessfinancing'>Business Financing</a></li>
-<li><a href='/vbic/resources-by-topic#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
-<li><a href='/vbic/resources-by-topic#businessplanning'>Business Planning</a></li>
-<li><a href='/vbic/resources-by-topic#businessplans'>Business Plans</a></li>
+<li><a href='/vbic/topics#accounting'>Accounting</a></li>
+<li><a href='/vbic/topics#advertising'>Advertising</a></li>
+<li><a href='/vbic/topics#agriculturaleconomics'>Agricultural Economics</a></li>
+<li><a href='/vbic/topics#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/topics#annualreports'>Annual Reports</a></li>
+<li><a href='/vbic/topics#associations'>Associations</a></li>
+<li><a href='/vbic/topics#auditing'>Auditing</a></li>
+<li><a href='/vbic/topics#bankloans'>Bank Loans</a></li>
+<li><a href='/vbic/topics#biography'>Biography</a></li>
+<li><a href='/vbic/topics#bonds'>Bonds</a></li>
+<li><a href='/vbic/topics#brands'>Brands</a></li>
+<li><a href='/vbic/topics#businessfinancing'>Business Financing</a></li>
+<li><a href='/vbic/topics#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
+<li><a href='/vbic/topics#businessplanning'>Business Planning</a></li>
+<li><a href='/vbic/topics#businessplans'>Business Plans</a></li>
 <li><a href='/vbic/career'>Career</a></li>
-<li><a href='/vbic/resources-by-topic#casestudies'>Case Studies</a></li>
-<li><a href='/vbic/resources-by-topic#citationdatabase'>Citation Database</a></li>
-<li><a href='/vbic/resources-by-topic#citations'>Citations</a></li>
+<li><a href='/vbic/topics#casestudies'>Case Studies</a></li>
+<li><a href='/vbic/topics#citationdatabase'>Citation Database</a></li>
+<li><a href='/vbic/topics#citations'>Citations</a></li>
 <li><a href='/vbic/company information'>Company Information</a></li>
-<li><a href='/vbic/resources-by-topic#companyprofilesandresearch'>Company Profiles and Research</a></li>
-<li><a href='/vbic/resources-by-topic#compensation'>Compensation</a></li>
-<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
-<li><a href='/vbic/resources-by-topic#consumeranalysisandresearch'>Consumer Analysis and Research</a></li>
-<li><a href='/vbic/resources-by-topic#consumerpriceindex'>Consumer Price Index</a></li>
-<li><a href='/vbic/resources-by-topic#controversialissues'>Controversial Issues</a></li>
-<li><a href='/vbic/resources-by-topic#copyright'>Copyright</a></li>
-<li><a href='/vbic/resources-by-topic#corporateculture'>Corporate Culture</a></li>
-<li><a href='/vbic/resources-by-topic#countrybackground'>Country Background</a></li>
-<li><a href='/vbic/resources-by-topic#countrydata'>Country Data</a></li>
+<li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
+<li><a href='/vbic/topics#compensation'>Compensation</a></li>
+<li><a href='/vbic/topics#competitors'>Competitors</a></li>
+<li><a href='/vbic/topics#consumeranalysisandresearch'>Consumer Analysis and Research</a></li>
+<li><a href='/vbic/topics#consumerpriceindex'>Consumer Price Index</a></li>
+<li><a href='/vbic/topics#controversialissues'>Controversial Issues</a></li>
+<li><a href='/vbic/topics#copyright'>Copyright</a></li>
+<li><a href='/vbic/topics#corporateculture'>Corporate Culture</a></li>
+<li><a href='/vbic/topics#countrybackground'>Country Background</a></li>
+<li><a href='/vbic/topics#countrydata'>Country Data</a></li>
 <li><a href='/vbic/country research'>Country Research</a></li>
-<li><a href='/vbic/resources-by-topic#culture'>Culture</a></li>
-<li><a href='/vbic/resources-by-topic#debt'>Debt</a></li>
-<li><a href='/vbic/resources-by-topic#demographics'>Demographics</a></li>
+<li><a href='/vbic/topics#culture'>Culture</a></li>
+<li><a href='/vbic/topics#debt'>Debt</a></li>
+<li><a href='/vbic/topics#demographics'>Demographics</a></li>
 <li><a href='/vbic/demographics and statistics'>Demographics and Statistics</a></li>
-<li><a href='/vbic/resources-by-topic#dictionaries'>Dictionaries</a></li>
-<li><a href='/vbic/resources-by-topic#directinvestment'>Direct Investment</a></li>
-<li><a href='/vbic/resources-by-topic#dissertations'>Dissertations</a></li>
-<li><a href='/vbic/resources-by-topic#distributors'>Distributors</a></li>
-<li><a href='/vbic/resources-by-topic#doingbusinessin'>Doing Business In</a></li>
-<li><a href='/vbic/resources-by-topic#dowjonesindustrialaverage'>Dow Jones Industrial Average</a></li>
-<li><a href='/vbic/resources-by-topic#ebooks'>E-Books</a></li>
-<li><a href='/vbic/resources-by-topic#ecommerce'>E-Commerce</a></li>
-<li><a href='/vbic/resources-by-topic#ejournals'>E-Journals</a></li>
-<li><a href='/vbic/resources-by-topic#econometrics'>Econometrics</a></li>
-<li><a href='/vbic/resources-by-topic#economicdatainternational'>Economic Data: International</a></li>
-<li><a href='/vbic/resources-by-topic#economicdataunitedstates'>Economic Data: United States</a></li>
-<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/topics#dictionaries'>Dictionaries</a></li>
+<li><a href='/vbic/topics#directinvestment'>Direct Investment</a></li>
+<li><a href='/vbic/topics#dissertations'>Dissertations</a></li>
+<li><a href='/vbic/topics#distributors'>Distributors</a></li>
+<li><a href='/vbic/topics#doingbusinessin'>Doing Business In</a></li>
+<li><a href='/vbic/topics#dowjonesindustrialaverage'>Dow Jones Industrial Average</a></li>
+<li><a href='/vbic/topics#ebooks'>E-Books</a></li>
+<li><a href='/vbic/topics#ecommerce'>E-Commerce</a></li>
+<li><a href='/vbic/topics#ejournals'>E-Journals</a></li>
+<li><a href='/vbic/topics#econometrics'>Econometrics</a></li>
+<li><a href='/vbic/topics#economicdatainternational'>Economic Data: International</a></li>
+<li><a href='/vbic/topics#economicdataunitedstates'>Economic Data: United States</a></li>
+<li><a href='/vbic/topics#economicindicators'>Economic Indicators</a></li>
 <li><a href='/vbic/economics'>Economics</a></li>
-<li><a href='/vbic/resources-by-topic#employment'>Employment</a></li>
-<li><a href='/vbic/resources-by-topic#encyclopedia'>Encyclopedia</a></li>
+<li><a href='/vbic/topics#employment'>Employment</a></li>
+<li><a href='/vbic/topics#encyclopedia'>Encyclopedia</a></li>
 <li><a href='/vbic/entrepreneurship'>Entrepreneurship</a></li>
-<li><a href='/vbic/resources-by-topic#ethics'>Ethics</a></li>
-<li><a href='/vbic/resources-by-topic#export'>Export</a></li>
+<li><a href='/vbic/topics#ethics'>Ethics</a></li>
+<li><a href='/vbic/topics#export'>Export</a></li>
 <li><a href='/vbic/finance &amp; investment'>Finance &amp; Investment</a></li>
-<li><a href='/vbic/resources-by-topic#financialinformation'>Financial Information</a></li>
-<li><a href='/vbic/resources-by-topic#foreigndirectinvestment'>Foreign Direct Investment</a></li>
-<li><a href='/vbic/resources-by-topic#franchising'>Franchising</a></li>
-<li><a href='/vbic/resources-by-topic#fundraising'>Fundraising</a></li>
-<li><a href='/vbic/resources-by-topic#globalization'>Globalization</a></li>
-<li><a href='/vbic/resources-by-topic#grants'>Grants</a></li>
-<li><a href='/vbic/resources-by-topic#grossdomesticproductgdp'>Gross Domestic Product (GDP)</a></li>
-<li><a href='/vbic/resources-by-topic#grossnationalincomegni'>Gross National Income (GNI)</a></li>
-<li><a href='/vbic/resources-by-topic#humanresourcemanagement'>Human Resource Management</a></li>
-<li><a href='/vbic/resources-by-topic#import'>Import</a></li>
+<li><a href='/vbic/topics#financialinformation'>Financial Information</a></li>
+<li><a href='/vbic/topics#foreigndirectinvestment'>Foreign Direct Investment</a></li>
+<li><a href='/vbic/topics#franchising'>Franchising</a></li>
+<li><a href='/vbic/topics#fundraising'>Fundraising</a></li>
+<li><a href='/vbic/topics#globalization'>Globalization</a></li>
+<li><a href='/vbic/topics#grants'>Grants</a></li>
+<li><a href='/vbic/topics#grossdomesticproductgdp'>Gross Domestic Product (GDP)</a></li>
+<li><a href='/vbic/topics#grossnationalincomegni'>Gross National Income (GNI)</a></li>
+<li><a href='/vbic/topics#humanresourcemanagement'>Human Resource Management</a></li>
+<li><a href='/vbic/topics#import'>Import</a></li>
 <li><a href='/vbic/industry'>Industry</a></li>
-<li><a href='/vbic/resources-by-topic#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/resources-by-topic#industryoverview'>Industry Overview</a></li>
-<li><a href='/vbic/resources-by-topic#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/resources-by-topic#industrytrends'>Industry Trends</a></li>
-<li><a href='/vbic/resources-by-topic#internationalaffairs'>International Affairs</a></li>
-<li><a href='/vbic/resources-by-topic#internationalbusiness'>International Business</a></li>
-<li><a href='/vbic/resources-by-topic#internationallaw'>International Law</a></li>
-<li><a href='/vbic/resources-by-topic#internationaltrade'>International Trade</a></li>
-<li><a href='/vbic/resources-by-topic#investmentandsecurities'>Investment and Securities</a></li>
-<li><a href='/vbic/resources-by-topic#jobs'>Jobs</a></li>
-<li><a href='/vbic/resources-by-topic#law'>Law</a></li>
-<li><a href='/vbic/resources-by-topic#leadership'>Leadership</a></li>
-<li><a href='/vbic/resources-by-topic#lifestyles'>Lifestyles</a></li>
+<li><a href='/vbic/topics#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/topics#industryoverview'>Industry Overview</a></li>
+<li><a href='/vbic/topics#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/topics#industrytrends'>Industry Trends</a></li>
+<li><a href='/vbic/topics#internationalaffairs'>International Affairs</a></li>
+<li><a href='/vbic/topics#internationalbusiness'>International Business</a></li>
+<li><a href='/vbic/topics#internationallaw'>International Law</a></li>
+<li><a href='/vbic/topics#internationaltrade'>International Trade</a></li>
+<li><a href='/vbic/topics#investmentandsecurities'>Investment and Securities</a></li>
+<li><a href='/vbic/topics#jobs'>Jobs</a></li>
+<li><a href='/vbic/topics#law'>Law</a></li>
+<li><a href='/vbic/topics#leadership'>Leadership</a></li>
+<li><a href='/vbic/topics#lifestyles'>Lifestyles</a></li>
 <li><a href='/vbic/logistics'>Logistics</a></li>
-<li><a href='/vbic/resources-by-topic#management'>Management</a></li>
-<li><a href='/vbic/resources-by-topic#manufacturing'>Manufacturing</a></li>
-<li><a href='/vbic/resources-by-topic#marketshare'>Market Share</a></li>
-<li><a href='/vbic/resources-by-topic#marketsize'>Market Size</a></li>
+<li><a href='/vbic/topics#management'>Management</a></li>
+<li><a href='/vbic/topics#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/topics#marketshare'>Market Share</a></li>
+<li><a href='/vbic/topics#marketsize'>Market Size</a></li>
 <li><a href='/vbic/marketing'>Marketing</a></li>
-<li><a href='/vbic/resources-by-topic#marketingplans'>Marketing Plans</a></li>
-<li><a href='/vbic/resources-by-topic#masterstheses'>Master's Theses</a></li>
-<li><a href='/vbic/resources-by-topic#mergersandacquisitions'>Mergers and Acquisitions</a></li>
-<li><a href='/vbic/resources-by-topic#mutualfunds'>Mutual Funds</a></li>
-<li><a href='/vbic/resources-by-topic#naicscode'>NAICS Code</a></li>
-<li><a href='/vbic/resources-by-topic#news'>News</a></li>
-<li><a href='/vbic/resources-by-topic#nonprofits'>Nonprofits</a></li>
-<li><a href='/vbic/resources-by-topic#operationsmanagement'>Operations Management</a></li>
-<li><a href='/vbic/resources-by-topic#options'>Options</a></li>
-<li><a href='/vbic/resources-by-topic#outsourcing'>Outsourcing</a></li>
-<li><a href='/vbic/resources-by-topic#patentsandtrademarks'>Patents and Trademarks</a></li>
-<li><a href='/vbic/resources-by-topic#philanthropy'>Philanthropy</a></li>
-<li><a href='/vbic/resources-by-topic#polls'>Polls</a></li>
-<li><a href='/vbic/resources-by-topic#ports'>Ports</a></li>
+<li><a href='/vbic/topics#marketingplans'>Marketing Plans</a></li>
+<li><a href='/vbic/topics#masterstheses'>Master's Theses</a></li>
+<li><a href='/vbic/topics#mergersandacquisitions'>Mergers and Acquisitions</a></li>
+<li><a href='/vbic/topics#mutualfunds'>Mutual Funds</a></li>
+<li><a href='/vbic/topics#naicscode'>NAICS Code</a></li>
+<li><a href='/vbic/topics#news'>News</a></li>
+<li><a href='/vbic/topics#nonprofits'>Nonprofits</a></li>
+<li><a href='/vbic/topics#operationsmanagement'>Operations Management</a></li>
+<li><a href='/vbic/topics#options'>Options</a></li>
+<li><a href='/vbic/topics#outsourcing'>Outsourcing</a></li>
+<li><a href='/vbic/topics#patentsandtrademarks'>Patents and Trademarks</a></li>
+<li><a href='/vbic/topics#philanthropy'>Philanthropy</a></li>
+<li><a href='/vbic/topics#polls'>Polls</a></li>
+<li><a href='/vbic/topics#ports'>Ports</a></li>
 <li><a href='/vbic/product'>Product</a></li>
-<li><a href='/vbic/resources-by-topic#productcodes'>Product Codes</a></li>
-<li><a href='/vbic/resources-by-topic#productdevelopment'>Product Development</a></li>
-<li><a href='/vbic/resources-by-topic#publicpolicy'>Public Policy</a></li>
-<li><a href='/vbic/resources-by-topic#rankings'>Rankings</a></li>
-<li><a href='/vbic/resources-by-topic#regionalnews'>Regional News</a></li>
-<li><a href='/vbic/resources-by-topic#regulations'>Regulations</a></li>
-<li><a href='/vbic/resources-by-topic#risk'>Risk</a></li>
-<li><a href='/vbic/resources-by-topic#sampp500'>S&amp;P 500</a></li>
-<li><a href='/vbic/resources-by-topic#secfilings'>SEC Filings</a></li>
-<li><a href='/vbic/resources-by-topic#sic'>SIC</a></li>
-<li><a href='/vbic/resources-by-topic#swot'>SWOT</a></li>
-<li><a href='/vbic/resources-by-topic#smallbusiness'>Small Business</a></li>
-<li><a href='/vbic/resources-by-topic#socialentrepreneurship'>Social Entrepreneurship</a></li>
-<li><a href='/vbic/resources-by-topic#statisticsinternational'>Statistics: International</a></li>
-<li><a href='/vbic/resources-by-topic#statisticsunitedstates'>Statistics: United States</a></li>
-<li><a href='/vbic/resources-by-topic#stockexchange'>Stock Exchange</a></li>
-<li><a href='/vbic/resources-by-topic#stocks'>Stocks</a></li>
-<li><a href='/vbic/resources-by-topic#surveys'>Surveys</a></li>
-<li><a href='/vbic/resources-by-topic#taxation'>Taxation</a></li>
-<li><a href='/vbic/resources-by-topic#technology'>Technology</a></li>
-<li><a href='/vbic/resources-by-topic#tests'>Tests</a></li>
-<li><a href='/vbic/resources-by-topic#theses'>Theses</a></li>
-<li><a href='/vbic/resources-by-topic#tradeagreements'>Trade Agreements</a></li>
-<li><a href='/vbic/resources-by-topic#training'>Training</a></li>
-<li><a href='/vbic/resources-by-topic#trains'>Trains</a></li>
-<li><a href='/vbic/resources-by-topic#transportationmodes'>Transportation Modes</a></li>
-<li><a href='/vbic/resources-by-topic#venturecapital'>Venture Capital</a></li>
-<li><a href='/vbic/resources-by-topic#volunteerism'>Volunteerism</a></li>
-<li><a href='/vbic/resources-by-topic#wallstreetjournal'>Wall Street Journal</a></li>
-<li><a href='/vbic/resources-by-topic#wholesale'>Wholesale</a></li>
+<li><a href='/vbic/topics#productcodes'>Product Codes</a></li>
+<li><a href='/vbic/topics#productdevelopment'>Product Development</a></li>
+<li><a href='/vbic/topics#publicpolicy'>Public Policy</a></li>
+<li><a href='/vbic/topics#rankings'>Rankings</a></li>
+<li><a href='/vbic/topics#regionalnews'>Regional News</a></li>
+<li><a href='/vbic/topics#regulations'>Regulations</a></li>
+<li><a href='/vbic/topics#risk'>Risk</a></li>
+<li><a href='/vbic/topics#sampp500'>S&amp;P 500</a></li>
+<li><a href='/vbic/topics#secfilings'>SEC Filings</a></li>
+<li><a href='/vbic/topics#sic'>SIC</a></li>
+<li><a href='/vbic/topics#swot'>SWOT</a></li>
+<li><a href='/vbic/topics#smallbusiness'>Small Business</a></li>
+<li><a href='/vbic/topics#socialentrepreneurship'>Social Entrepreneurship</a></li>
+<li><a href='/vbic/topics#statisticsinternational'>Statistics: International</a></li>
+<li><a href='/vbic/topics#statisticsunitedstates'>Statistics: United States</a></li>
+<li><a href='/vbic/topics#stockexchange'>Stock Exchange</a></li>
+<li><a href='/vbic/topics#stocks'>Stocks</a></li>
+<li><a href='/vbic/topics#surveys'>Surveys</a></li>
+<li><a href='/vbic/topics#taxation'>Taxation</a></li>
+<li><a href='/vbic/topics#technology'>Technology</a></li>
+<li><a href='/vbic/topics#tests'>Tests</a></li>
+<li><a href='/vbic/topics#theses'>Theses</a></li>
+<li><a href='/vbic/topics#tradeagreements'>Trade Agreements</a></li>
+<li><a href='/vbic/topics#training'>Training</a></li>
+<li><a href='/vbic/topics#trains'>Trains</a></li>
+<li><a href='/vbic/topics#transportationmodes'>Transportation Modes</a></li>
+<li><a href='/vbic/topics#venturecapital'>Venture Capital</a></li>
+<li><a href='/vbic/topics#volunteerism'>Volunteerism</a></li>
+<li><a href='/vbic/topics#wallstreetjournal'>Wall Street Journal</a></li>
+<li><a href='/vbic/topics#wholesale'>Wholesale</a></li>
 </ul>
