--- a/output/rel-com.html
+++ b/output/rel-com.html
@@ -1,17 +1,17 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/resources-by-topic#annualreports'>Annual Reports</a></li>
-<li><a href='/vbic/resources-by-topic#companyprofiles'>Company Profiles</a></li>
-<li><a href='/vbic/resources-by-topic#competitors'>Competitors</a></li>
-<li><a href='/vbic/resources-by-topic#financialinformation'>Financial information</a></li>
-<li><a href='/vbic/resources-by-topic#internationalbusiness'>International Business</a></li>
-<li><a href='/vbic/resources-by-topic#investmentandsecurities'>Investment and Securities</a></li>
-<li><a href='/vbic/resources-by-topic#manufacturing'>Manufacturing</a></li>
-<li><a href='/vbic/resources-by-topic#marketshare'>Market Share</a></li>
-<li><a href='/vbic/resources-by-topic#mergersandacquisitions'>Mergers and Acquisitions</a></li>
-<li><a href='/vbic/resources-by-topic#biography'>Biography</a></li>
-<li><a href='/vbic/resources-by-topic#rankings'>Rankings</a></li>
-<li><a href='/vbic/resources-by-topic#regulations'>Regulations</a></li>
-<li><a href='/vbic/resources-by-topic#swot'>SWOT</a></li>
+<li><a href='/vbic/topics#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/topics#annualreports'>Annual Reports</a></li>
+<li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
+<li><a href='/vbic/topics#competitors'>Competitors</a></li>
+<li><a href='/vbic/topics#financialinformation'>Financial information</a></li>
+<li><a href='/vbic/topics#internationalbusiness'>International Business</a></li>
+<li><a href='/vbic/topics#investmentandsecurities'>Investment and Securities</a></li>
+<li><a href='/vbic/topics#manufacturing'>Manufacturing</a></li>
+<li><a href='/vbic/topics#marketshare'>Market Share</a></li>
+<li><a href='/vbic/topics#mergersandacquisitions'>Mergers and Acquisitions</a></li>
+<li><a href='/vbic/topics#biography'>Biography</a></li>
+<li><a href='/vbic/topics#rankings'>Rankings</a></li>
+<li><a href='/vbic/topics#regulations'>Regulations</a></li>
+<li><a href='/vbic/topics#swot'>SWOT</a></li>
 </ul>
