--- a/output/rel-log.html
+++ b/output/rel-log.html
@@ -1,5 +1,5 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#productcodes'>Product Codes</a></li>
-<li><a href='/vbic/resources-by-topic#transportationmodes'>Transportation Modes</a></li>
+<li><a href='/vbic/topics#productcodes'>Product Codes</a></li>
+<li><a href='/vbic/topics#transportationmodes'>Transportation Modes</a></li>
 </ul>
