--- a/output/rel-car.html
+++ b/output/rel-car.html
@@ -1,6 +1,6 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#companyresearch'>Company Research</a></li>
-<li><a href='/vbic/resources-by-topic#industry'>Industry</a></li>
-<li><a href='/vbic/resources-by-topic#jobs'>Jobs</a></li>
+<li><a href='/vbic/topics#companyprofilesandresearch'>Company Profiles and Research</a></li>
+<li><a href='/vbic/topics#industry'>Industry</a></li>
+<li><a href='/vbic/topics#jobs'>Jobs</a></li>
 </ul>
