--- a/output/rel-cou.html
+++ b/output/rel-cou.html
@@ -1,13 +1,13 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#countrybackground'>Country Background</a></li>
-<li><a href='/vbic/resources-by-topic#culture'>Culture</a></li>
-<li><a href='/vbic/resources-by-topic#doingbusinessin'>Doing Business In</a></li>
-<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
-<li><a href='/vbic/resources-by-topic#globalization'>Globalization</a></li>
-<li><a href='/vbic/resources-by-topic#internationallaw'>International Law</a></li>
-<li><a href='/vbic/resources-by-topic#marketing'>Marketing</a></li>
-<li><a href='/vbic/resources-by-topic#news'>News</a></li>
-<li><a href='/vbic/resources-by-topic#statistics'>Statistics</a></li>
-<li><a href='/vbic/resources-by-topic#translations'>Translations</a></li>
+<li><a href='/vbic/topics#countrybackground'>Country Background</a></li>
+<li><a href='/vbic/topics#culture'>Culture</a></li>
+<li><a href='/vbic/topics#doingbusinessin'>Doing Business In</a></li>
+<li><a href='/vbic/topics#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/topics#globalization'>Globalization</a></li>
+<li><a href='/vbic/topics#internationallaw'>International Law</a></li>
+<li><a href='/vbic/topics#marketing'>Marketing</a></li>
+<li><a href='/vbic/topics#news'>News</a></li>
+<li><a href='/vbic/topics#statistics'>Statistics</a></li>
+<li><a href='/vbic/topics#translations'>Translations</a></li>
 </ul>
