--- a/output/rel-eco.html
+++ b/output/rel-eco.html
@@ -1,9 +1,9 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#consumerpriceindex'>Consumer Price Index</a></li>
-<li><a href='/vbic/resources-by-topic#demographics'>Demographics</a></li>
-<li><a href='/vbic/resources-by-topic#economicindicators'>Economic Indicators</a></li>
-<li><a href='/vbic/resources-by-topic#industryclassification'>Industry Classification</a></li>
-<li><a href='/vbic/resources-by-topic#laboreconomics'>Labor Economics</a></li>
-<li><a href='/vbic/resources-by-topic#news'>News</a></li>
+<li><a href='/vbic/topics#consumerpriceindex'>Consumer Price Index</a></li>
+<li><a href='/vbic/topics#demographics'>Demographics</a></li>
+<li><a href='/vbic/topics#economicindicators'>Economic Indicators</a></li>
+<li><a href='/vbic/topics#industryclassification'>Industry Classification</a></li>
+<li><a href='/vbic/topics#laboreconomics'>Labor Economics</a></li>
+<li><a href='/vbic/topics#news'>News</a></li>
 </ul>
