--- a/output/rel-fin.html
+++ b/output/rel-fin.html
@@ -1,10 +1,10 @@
 <h3>Related Topics</h3>
 <ul>
-<li><a href='/vbic/resources-by-topic#analystreports'>Analyst Reports</a></li>
-<li><a href='/vbic/resources-by-topic#bonds'>Bonds</a></li>
-<li><a href='/vbic/resources-by-topic#industryratios'>Industry Ratios</a></li>
-<li><a href='/vbic/resources-by-topic#investments'>Investments</a></li>
-<li><a href='/vbic/resources-by-topic#mutualfunds'>Mutual Funds</a></li>
-<li><a href='/vbic/resources-by-topic#stocks'>Stocks</a></li>
-<li><a href='/vbic/resources-by-topic#stockexchange'>Stock Exchange</a></li>
+<li><a href='/vbic/topics#analystreports'>Analyst Reports</a></li>
+<li><a href='/vbic/topics#bonds'>Bonds</a></li>
+<li><a href='/vbic/topics#industryratios'>Industry Ratios</a></li>
+<li><a href='/vbic/topics#investments'>Investments</a></li>
+<li><a href='/vbic/topics#mutualfunds'>Mutual Funds</a></li>
+<li><a href='/vbic/topics#stocks'>Stocks</a></li>
+<li><a href='/vbic/topics#stockexchange'>Stock Exchange</a></li>
 </ul>
