--- a/output/index.html
+++ b/output/index.html
@@ -10,7 +10,7 @@
 <li><a href='/vbic/topics#biography'>Biography</a></li>
 <li><a href='/vbic/topics#bonds'>Bonds</a></li>
 <li><a href='/vbic/topics#brands'>Brands</a></li>
-<li><a href='/vbic/topics#businessfinancing'>Business Financing</a></li>
+<li><a href='/vbic/business financing'>Business Financing</a></li>
 <li><a href='/vbic/topics#businessopportunitiesgovernment'>Business Opportunities (Government)</a></li>
 <li><a href='/vbic/topics#businessplanning'>Business Planning</a></li>
 <li><a href='/vbic/topics#businessplans'>Business Plans</a></li>
