--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -10,6 +10,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://arjournals.annualreviews.org/loi/resource'>Annual Review of Resource Economics</a></li>
 <li><a href='http://www.ashoka.org/home/index.cfm'>Ashoka</a></li>
 <li><a href='http://wrds.wharton.upenn.edu'>AuditAnalytics</a> <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research.) Access is available by account only - request account at https://wrds.wharton.upenn.edu</em>]</div></li>
+<li><a href='http://www.morebusiness.com/running_your_business/financing/overview.brc'>An Overview of Financing Options</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='B'>B</h3>
@@ -54,8 +55,8 @@
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/KBR'>D&amp;B Key Business Ratios</a></li>
 <li><a href='http://www.usa.gov/Topics/Reference_Shelf/Data.shtml'>Data and Statistics: USA.gov</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip '>Data-Planet Statistical Datasets</a></li>
-<li>Data-Planet Statistical Ready Reference</li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip'>Data-Planet Statistical Datasets</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?http://readyreference.data-planet.com/dataplanet/'>Data-Planet Statistical Ready Reference</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to: helpme@rhsmith.umd.edu.</em>]</div></li>
 <li><a href='http://www.rhsmith.umd.edu//node/345'>Dingman Center for Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://www.uniworldbp.com/search.php'>Directory of American Firms Operating in Foreign Countries/Foreign Firms Operating in U.S</a></li>
@@ -211,6 +212,7 @@
 <li><a href='http://www.census.gov/people/'>Population and Household</a></li>
 <li><a href='http://www.mindtools.com/pages/article/newTMC_08.htm'>Porter's Five Forces: Assessing the Balance of in a Business Situation</a></li>
 <li><a href='http://portfocus.com/'>PortFocus: Ports Harbours Marinas Worldwide</a></li>
+<li>Pratt's Guide to Venture Capital Sources <div style='font-size: 90%'>[<em>Note: Print only.</em>]</div></li>
 <li><a href='http://www.pwcmoneytree.com/MTPublic/ns/index.jsp'>PricewaterhouseCoopers: MoneyTree Report</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.ebscohost.com/login.aspx?authtype=ip,uid&profile=ehost&defaultdb=PSYH'>PsycInfo</a></li>
 </ul>
@@ -284,6 +286,7 @@
 <h3 id='V'>V</h3>
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www3.valueline.com/is/rc.aspx'>ValueLine (ValueLine Investment Survey)</a></li>
+<li><a href='http://www.vfinance.com/home.asp?ToolPage=venca.asp'>vFinance.com</a></li>
 <li><a href='http://www.volunteertoday.com/'>Volunteer Today</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
