--- a/output/summary_cats.html
+++ b/output/summary_cats.html
@@ -1,4 +1,10 @@
 <h1>List of All Categories</h1>
+<h2>Business Financing</h2>
+<ul>
+<li>An Overview of Financing Options = 1</li>
+<li>vFinance.com = 2</li>
+<li>Pratt's Guide to Venture Capital Sources = 3</li>
+</ul>
 <h2>Career</h2>
 <ul>
 <li>Occupational Outlook Handbook = 1</li>
